[package]
name = "monitor-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x11"]
x11 = ["dep:regex", "dep:once_cell"]
serialize = ["dep:miniserde"]

[dependencies]
regex = { version = "1.8", optional = true }
once_cell = { version = "1.17", optional = true }
miniserde = { version = "0.1", optional = true }
