[package]
name = "monitor-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x11"]
x11 = ["dep:regex", "dep:once_cell"]
serialize = ["dep:miniserde"]
global-cache = ["dep:directories", "serialize"]

cli = ["dep:bpaf", "global-cache"]

[dependencies]
regex = { version = "1.8", optional = true }
once_cell = { version = "1.17", optional = true }
miniserde = { version = "0.1", optional = true }
directories = { version = "5.0", optional = true }
bpaf = { version = "0.8", optional = true }
thiserror = "1.0"
anyhow = { version = "1.0" }

[[bin]]
name = "monitor-utils"
required-features = ["cli"]

[profile.release]
opt-level = "z"
strip = true
lto = true
